Adding composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "rsinger/simplesamlphp",
+  "name": "rsinger/simplesaml",
   "type": "library",
   "homepage": "http://talis.com",
   "authors": [{
